// proto/serv/user/v2/user_srv.proto

syntax = "proto3";

package proto.serv.user.v2;

// /usr/local/include/google/protobuf/
import "google/api/annotations.proto";
// import "google/api/http.proto";
// import "google/protobuf/any.proto";
// import "google/protobuf/duration.proto";
// import "google/protobuf/empty.proto";
// import "google/protobuf/field_mask.proto";
// import "google/protobuf/struct.proto";
// import "google/protobuf/timestamp.proto";
// import "google/protobuf/wrappers.proto";
// import "google/rpc/status.proto";
import "proto/core/favourite/v1/favourite.proto";
import "proto/core/idx/v1/idx.proto";
import "proto/core/opinion/v1/opinion.proto";
import "proto/core/user/v1/user.proto";
// https://github.com/bufbuild/protoc-gen-validate
// import "validate/validate.proto";

option go_package = "x-gwi/proto/serv/user/v2;user_srvpb";

// UserService
// a microservice to handle companies. It provides the following operations:
// • Create, • Patch, • Delete, • Get (one)
// standard methods: List, Get, Create, Update, and Delete
service UserService {
  // Create
  rpc Create(proto.core.user.v1.UserInstance) returns (proto.core.user.v1.UserInstance) {
    option (google.api.http) = {
      post: "/api/v2/user/create"
      body: "*"
    };
  };

  // Get
  rpc Get(proto.core.idx.v1.IDX) returns (proto.core.user.v1.UserInstance) {
    option (google.api.http) = {
      get: "/api/v2/user/get/{uuid}"
      additional_bindings { post: "/api/v2/user/get" body: "*" }
    };
  };

  // Gett
  rpc Gett(proto.core.idx.v1.IDX) returns (proto.core.user.v1.UserInstance);

  // Update
  rpc Update(proto.core.user.v1.UserInstance) returns (proto.core.user.v1.UserInstance) {
    option (google.api.http) = {
      patch: "/api/v2/user/update/{id.uuid}/{id.rev}"
      body: "*"
      // additional_bindings {
      //   put: "/api/v2/user/update/{id.uuid}/{id.rev}"
      //   body: "*"
      // }
    };
  };

  // Delete
  rpc Delete(proto.core.idx.v1.IDX) returns (proto.core.user.v1.UserInstance) {
    option (google.api.http) = {
      delete: "/api/v2/user/delete/{uuid}"
    };
  };

  // ListFavourites - stream favourites of a user
  rpc ListFavourites(proto.core.idx.v1.IDX) returns (stream proto.core.favourite.v1.FavouriteAsset) {
    option (google.api.http) = {
      get: "/api/v2/user/{uuid}/favourites"
    };
  };

  // ListOpinions - stream opinions of a user
  rpc ListOpinions(proto.core.idx.v1.IDX) returns (stream proto.core.opinion.v1.OpinionAsset) {
    option (google.api.http) = {
      get: "/api/v2/user/{uuid}/opinions"
    };
  };
}
